  o Client Changes:
    * When committing source changes in interactive mode, conary will ask you 
      you to confirm the commit.
    * A new configuration option, autoResolvePackages, tells conary to install
      the packages that include the components needed for dep resolution.
    * You can now install locally cooked groups.
    * Added script to mirror repositories
  o Code structure:
    * Conary now has the concept of "weak references", where a weak reference
      allows conary to be able to recognize the relationship between a 
      collection and the children of collections it contains.  This allows
      us to add several new features to conary, documented in Client and Build
      changes.
  o Config Changes:
    * Conary config handling now supports comments at the end of config lines.
      # can be escaped by a \ to use a literal # in a configuration option.
    * Default macros used in cooking are now stored in /etc/conary/macros.  
      The 'defaultMacros' parameter determines where cvc searches for macro
      definitions.
  o Server Changes:
    * Added hasTroves() repository code
    * Creating changesets atomically moves complete changesets into place
    * Content store no longer reference counts entries
    * Added support for trove marks to support mirroring

Changes in 0.80.4:
  o Build Changes:
    * PackageRecipe has been changed to follow our change to split
      conary into three packages.
    * x86_64 packaging elimintated the conary:lib component to follow x86
      (those files now belong in conary-build:lib)

Changes in 0.80.3:
  o Client Changes:
    * The internal branch source and branch binary flags were changed
      to a bitmask.
    * The warning message printed when multiple branches match a cvc
      checkout command has been improved.
    * Only interactive mode can create binary shadows and branches, and
      a warning is displayed before they are created (since source branches